--- a/core/templates/dashboard/customer/base.html
+++ b/core/templates/dashboard/customer/base.html
@@ -103,7 +103,7 @@
                             <button class="btn btn-ghost-secondary btn-icon" id="dropdownMenuLink"
                                 data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="avatar avatar-sm avatar-circle">
-                                    <img class="avatar-img" src=""
+                                    <img class="avatar-img" src="{{request.user.user_profile.image.url}}"
                                         alt="Image Description">
                                 </span>
                             </button>
