--- a/core/templates/dashboard/customer/sidebar.html
+++ b/core/templates/dashboard/customer/sidebar.html
@@ -9,7 +9,6 @@
           <div class="d-none d-lg-block text-center mb-5">
             <div class="avatar avatar-xxl avatar-circle mb-3">
               <img class="avatar-img" src="{{request.user.user_profile.image.url}}" alt="Image Description" />
-
             </div>
 
             <h4 class="card-title mb-0">{{request.user.user_profile.get_fullname}}</h4>
@@ -23,18 +22,18 @@
           <!-- List -->
           <ul class="nav nav-sm nav-tabs nav-vertical mb-4">
             <li class="nav-item">
-              <a class="nav-link" href="">
+              <a class="nav-link" href="{% url 'dashboard:customer:home' %}">
                 <i class="bi-person-badge nav-icon"></i>داشبورد
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">
+              <a class="nav-link" href="{% url 'dashboard:customer:security' %}">
                 <i class="bi-shield-shaded nav-icon"></i> امنیت
               </a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="">
+              <a class="nav-link" href="{% url 'dashboard:customer:profile' %}">
                 <i class="bi-sliders nav-icon"></i> تنظیمات پروفایل
               </a>
             </li>
