--- a/core/templates/dashboard/admin/product/product-list.html
+++ b/core/templates/dashboard/admin/product/product-list.html
@@ -19,7 +19,7 @@
         <div class="d-flex justify-content-between align-items-center">
             <h5 class="">لیست محصولات</h5>
 
-            <a class="btn btn-primary" href="./admin-account-add-product.html">اضافه کردن</a>
+            <a class="btn btn-primary" href="{% url 'dashboard:admin:product-create' %}">اضافه کردن</a>
         </div>
         <div class="col-sm mb-3 mb-sm-0">
                     <h6 class="mb-0">تعداد کل محصولات: {{ total_items }}</h6>
