--- a/core/templates/basses/base.html
+++ b/core/templates/basses/base.html
@@ -461,6 +461,8 @@
 <!-- JS Implementing Plugins -->
 <script src="{% static 'js/vendor.min.js' %}"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 <!-- JS Front -->
 
 <!-- JS Implementing Plugins -->
@@ -737,6 +739,8 @@
     }
 
 </script>
+
+
 {% endblock extra_js %}
 {% block extra_js_no_compress %} {% endblock extra_js_no_compress %}
 {% include 'basses/massage.html' %}
