--- a/core/templates/order/checkout.html
+++ b/core/templates/order/checkout.html
@@ -1,6 +1,6 @@
 {% extends 'basses/base.html' %}
 {% load static %}
-
+{% load humanize %}
 
 {% block content %}
 <!-- Content -->
@@ -10,7 +10,7 @@
             <h4 class="mb-3">انتخاب آدرس </h4>
 
             <!-- Form -->
-            <form class="needs-validation" id="checkout-form" >
+            <form class="needs-validation" id="checkout-form">
 
 
                 <hr class="my-4">
@@ -18,7 +18,7 @@
                 <div class="d-grid gap-2">
                     {% for address in addresses %}
                     <div class="form-check">
-                        <input type="radio" class="form-check-input" name="address" id="address-{{ address.id }}"
+                        <input type="radio" class="form-check-input" name="address_id" id="address-{{ address.id }}"
                                required>
                         <label class="form-check-label" for="address-{{ address.id }}">
                             {{ address.address }} - {{ address.city }} - {{ address.state }} - {{ address.zip_code }}
@@ -32,7 +32,6 @@
                         <a class="" href="{% url 'dashboard:customer:address-list' %}">مدیریت آدرس ها</a>
                     </div>
                 </div>
-
 
 
                 <div class="row align-items-center">
@@ -82,20 +81,25 @@
                                 </div>
                             </div>
 
+
+
                             <div class="d-grid gap-3 mb-4">
-                                <dl class="row">
-                                    <dt class="col-sm-6">مالیات تخمینی</dt>
-                                    <dd class="col-sm-12 text-sm-end mb-0">با ضریب 9% - 35000 تومان</dd>
-
-                                </dl>
-                                <!-- End Row -->
 
                                 <dl class="row">
-                                    <dt class="col-sm-6">جمع کل</dt>
-                                    <dd class="col-sm-6 text-sm-end mb-0">450000 تومان</dd>
+                                    <dt class="col-sm-6">جمع مبلغ کالا</dt>
+                                    <dd class="col-sm-6 text-sm-end mb-0">
+                                        {{ total_price|floatformat:0|intcomma }} تومان
+                                    </dd>
                                 </dl>
-                                <!-- End Row -->
+
+                                <dl class="row">
+                                    <dt class="col-sm-6">مالیات (۹٪)</dt>
+                                    <dd class="col-sm-6 text-sm-end mb-0">
+                                        {{ total_tax|intcomma }} تومان
+                                    </dd>
+                                </dl>
                             </div>
+
 
                             <div class="d-grid">
                                 <button class="btn btn-primary btn-lg" form="#checkout-form">ثبت نهایی</button>
