--- a/core/templates/website/index.html
+++ b/core/templates/website/index.html
@@ -346,5 +346,5 @@
     <!-- End Row -->
 </div>
 <!-- End Clients -->
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 {% endblock content %}
